[workspace]
resolver = "2"
members = [
    "common",
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
    "day24",
    "day25",
]

[workspace.dependencies]
anyhow = "1.0"
arrayvec = "0.7"
indoc = "2.0"
itertools = "0.13"
nom = "7.1"
regex = "1.11"
strum = "0.26.3"
strum_macros = "0.26.3"
nalgebra = "0.33"


[profile.release]
opt-level = 3
#lto = true
#codegen-units = 1