[package]
name = "day11"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
arrayvec = { workspace = true }
indoc = { workspace = true }
itertools = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
nalgebra = { workspace = true }
rustc-hash = { workspace = true }
dlv-list = "0.6.0"

